deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: test-frontend
    version: v4
  name: test-frontend-v4
  namespace: default
spec:
  replicas: 4
  minReadySeconds: 30
  selector:
    matchLabels:
      app: test-frontend
      version: v4
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test-frontend
        version: v4
    spec:
      containers:
      - image: kevcoxe/test-kubernetes-frontend:0.0.4
        imagePullPolicy: Always
        name: test-frontend
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-frontend
  name: test-frontend-v4
  namespace: default
spec:
  ports:
  - nodePort: 30885
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-frontend
    version: v4
  sessionAffinity: None
  type: LoadBalancer
