gateway-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: test-frontend
          servicePort: 3000
      - path: /api/(.*)
        backend:
          serviceName: other-api
          servicePort: 8080
